--- a/index.ipynb
+++ b/index.ipynb
@@ -356,7 +356,7 @@
    },
    "outputs": [],
    "source": [
-    "city_count = None\n",
+    "city_count = cities.key()\n",
     "city_count # 12"
    ]
   },
