automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -423,7 +423,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = cities[11]['Population']\n",
+    "pyeongchang_values = cities[11].key\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
